--- a/style.css
+++ b/style.css
@@ -2,10 +2,45 @@ h1{
     text-align: center;
 }
 
+.display{
+    width: 242px;
+    height: 40px;
+    background-color: lightgray;
+    display: flex;
+    margin-left: 3px;
+    border: 1px black solid;
+    display: flex;
+    justify-content: flex-end;
+    align-items:flex-end;
+    font-size: 32px;
+    padding: 4px;
+}
+
+.buttonGrid{
+    padding: 3px;
+}
+
 .calculator{
     margin-left: auto;
     margin-right: auto;
-    height:400px;
-    width: 140px;
+    height:275px;
+    width: 259px;
+    padding: 6px;
+    background-color: grey;
+}
 
+button{
+    width: 60px;
+    height: 40px;
+    margin-bottom: 4px;
+    font-size: 20px;
+    border: 1px solid black;
+}
+
+.clear{
+    width: 124px;
+}
+
+.delete{
+    width: 124px;
 }
