--- a/style.css
+++ b/style.css
@@ -37,6 +37,14 @@ button{
     border: 1px solid black;
 }
 
+button:hover{
+    background-color: gainsboro;
+}
+button:active {
+    box-shadow: 0 2px #666;
+    transform: translateY(4px);
+  }
+
 .clear{
     width: 124px;
 }
